--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "ejs": "2.5.5",
     "errorhandler": "1.4.3",
     "express": "4.13.4",
-    "express-jwt": "3.3.0",
+    "express-jwt": "^3.3.0",
+    "express-jwt-authz": "^1.0.0",
     "express-session": "1.13.0",
     "jsonwebtoken": "7.1.9",
+    "jwks-rsa": "^1.2.1",
     "method-override": "2.3.5",
     "methods": "1.1.2",
     "mongoose": "4.4.10",
