--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "slug": "0.9.1",
     "superagent": "^3.8.2",
     "superagent-promise": "^1.1.0",
-    "underscore": "1.8.3"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
