--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Alonzo Alden",
   "license": "MIT",
   "dependencies": {
+    "@mapbox/polyline": "^0.2.0",
     "axios": "^0.17.1",
     "babel-register": "^6.26.0",
     "body-parser": "1.15.0",
@@ -26,6 +27,7 @@
     "express-session": "1.13.0",
     "jsonwebtoken": "7.1.9",
     "jwks-rsa": "^1.2.1",
+    "mapbox-gl": "^0.43.0",
     "method-override": "2.3.5",
     "methods": "1.1.2",
     "mongoose": "4.4.10",
@@ -33,6 +35,7 @@
     "morgan": "1.7.0",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
+    "polyline": "^0.2.0",
     "request": "2.69.0",
     "slug": "0.9.1",
     "superagent": "^3.8.2",
