--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # API Keys
 env-config.js
 
-.vscode
+# IDE - VSCode
+.vscode/*
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
 
 # Logs
 logs
