--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "morgan": "1.7.0",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
+    "pg": "^7.4.3",
+    "pg-pool": "^2.0.3",
     "polyline": "^0.2.0",
     "request": "2.69.0",
     "slug": "0.9.1",
