--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "mapbox-gl": "^0.43.0",
     "method-override": "2.3.5",
     "methods": "1.1.2",
-    "mongoose": "4.4.10",
+    "mongoose": "^5.4.4",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "1.7.0",
     "passport": "0.3.2",
