--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@mapbox/polyline": "^0.2.0",
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "babel-register": "^6.26.0",
     "body-parser": "1.15.0",
     "cors": "2.7.1",
@@ -27,6 +27,7 @@
     "express-session": "1.13.0",
     "jsonwebtoken": "7.1.9",
     "jwks-rsa": "^1.2.1",
+    "lodash": "^4.17.11",
     "mapbox-gl": "^0.43.0",
     "method-override": "2.3.5",
     "methods": "1.1.2",
