--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.4.4",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "1.7.0",
+    "node-geocoder": "^3.22.0",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "pg": "^7.4.3",
